deploy/docker/envoy/envoy.yaml
---
static_resources:
  listeners:
  - name: "listener_0"
    address:
      socket_address:
        address: "0.0.0.0"
        port_value: 10000
    filter_chains:
    - filters:
      - name: "envoy.filters.network.http_connection_manager"
        typed_config:
          '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          stat_prefix: "ingress_http"
          access_log:
          - name: "envoy.access_loggers.stdout"
            typed_config:
              '@type': "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog"
          http_filters:
          - name: "envoy.filters.http.router"
            typed_config:
              '@type': "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
          route_config:
            name: "local_route"
            virtual_hosts:
            - name: "local_service"
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite_literal: "www.google.com"
                  cluster: "service_envoyproxy_io"
  clusters:
  - name: "service_envoyproxy_io"
    type: "LOGICAL_DNS"
    dns_lookup_family: "V4_ONLY"
    load_assignment:
      cluster_name: "service_envoyproxy_io"
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "www.google.com"
                port_value: 443
    transport_socket:
      name: "envoy.transport_sockets.tls"
      typed_config:
        '@type': "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext"
        sni: "www.envoyproxy.io"
